--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
     <!--<div id="elem01" class="element">ANCHE IO MI NASCONDO AL CLICK!</div>-->
 
-    <div id="elem02" class="element">IO TI SPIEGO IL <strong>CONCETTO</strong> DI <strong>"SCOPE"</strong></div>
+    <!--<div id="elem02" class="element">IO TI SPIEGO IL <strong>CONCETTO</strong> DI <strong>"SCOPE"</strong></div>-->
 
 
   </body>
